# forget-it

./: README.md  pyproject.toml
results/longmemeval_tiny/: longmemeval_lfu_num_samples-500_128.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_128.0 KiB_k5.csv  longmemeval_lfu_num_samples-500_192.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_192.0 KiB_k5.csv  longmemeval_lfu_num_samples-500_256.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_256.0 KiB_k5.csv  longmemeval_lfu_num_samples-500_512.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_512.0 KiB_k5.csv  longmemeval_lfu_num_samples-500_80.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_80.0 KiB_k5.csv  longmemeval_lfu_num_samples-500_96.0 KiB_k10.csv  longmemeval_lfu_num_samples-500_96.0 KiB_k5.csv  longmemeval_lru_num_samples-500_128.0 KiB_k10.csv  longmemeval_lru_num_samples-500_128.0 KiB_k5.csv  longmemeval_lru_num_samples-500_192.0 KiB_k10.csv  longmemeval_lru_num_samples-500_192.0 KiB_k5.csv  longmemeval_lru_num_samples-500_256.0 KiB_k10.csv  longmemeval_lru_num_samples-500_256.0 KiB_k5.csv  longmemeval_lru_num_samples-500_512.0 KiB_k10.csv  longmemeval_lru_num_samples-500_512.0 KiB_k5.csv  longmemeval_lru_num_samples-500_80.0 KiB_k10.csv  longmemeval_lru_num_samples-500_80.0 KiB_k5.csv  longmemeval_lru_num_samples-500_96.0 KiB_k10.csv  longmemeval_lru_num_samples-500_96.0 KiB_k5.csv
results/longmemeval_tiny/plots/: aggregate.csv
scripts/: measure.py  plot_longmemeval.py
src/forgetit/: settings.py
src/forgetit/backend/: __init__.py  backend.py  falkor.py  in_memory.py
src/forgetit/core/: __init__.py  (+2 more)
(+14 files in other folders)
